* Since writers also might have to wait when there is still some room   in the buffer, they need to be notified after a read when their   minimal write size requirement has just become satisfied. We were   notifying only when there was no space in the buffer before, which   caused bug #1755. * Removed Inode::NotifyWriteDone(). It's not needed anymore, since we   don't queue writers. They are always all notified, so that one doesn't   have to notify the next one, when it's done. * Renamed *Request* to *ReadRequest, since we do have WriteRequests now   as well.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@24701 a95241bf-73f2-0310-859d-f6bbb57e9c96